<?xml version="1.0"?>
<package format="2">
  <name>rcp</name>
  <version>0.0.1</version>
  <description>A rospy based package to read compute system performance</description>

  <maintainer email="george.chustz@gmail.com">George Chustz</maintainer>
  <author email='george.chustz@gmail.com'>George Chustz</author>
  <license>GNU GPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>   

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-psutil</exec_depend>

</package>